# wardroom

./: .gitignore  .rubocop.yml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  Vagrantfile  requirements.txt  setup.cfg  setup.py  vagrant.yml
.github/: PULL_REQUEST_TEMPLATE.md
ansible/: ansible.cfg  playbook.yml  pre.yml  provider.yml
docs/: README.md  architecture.md  bootstrapping-a-kubernetes-cluster.md  building-images.md
packer/: .gitignore  README.md  aws-us-east-1.json  aws-us-east-2.json  aws-us-west-1.json  aws-us-west-2.json  copy-ami  deploy-ami.py  gcp-source-images.json  goss.yaml  oci-us-phoenix-1.json  openstack.json  packer.json  setup.py  us-east-1.json  us-west-2.json
profiles/: ec2-ubuntu-16.04-calico.yml  ec2-ubuntu-16.04-canal.yml  vagrant-libvirt-ubuntu-18.04-calico.yml  vagrant-libvirt-ubuntu-18.04-canal.yml  vagrant-vbox-ubuntu-18.04-calico.yml  vagrant-vbox-ubuntu-18.04-canal.yml
swizzle/: .ansible.cfg  .gitignore  README.md  Vagrantfile  add-nodes.yml  ansible.cfg  extra_vars.yaml.example  install.yml  inventory.ini.example  main.yml  provision.py  requirements.txt  setup.cfg  swizzle.yml  upgrade.yml
swizzle/envs/rhel7.5/default/group_vars/: all.yaml
swizzle/envs/ubuntu16.04/default/group_vars/: all.yaml
swizzle/examples/: calico.yml  canal.yml  sample-extra-vars-centos.yml  sample-extra-vars-ubuntu.yml  sample-inventory.ini
swizzle/profiles/: ec2-ubuntu-16.04-calico.yml  vagrant.yml
swizzle/terraform/: main.tf
swizzle/wardroom_provision/: profile.py  shell.py
swizzle/wardroom_provision/provisioners/: __init__.py  terraform_ec2.py  vagrant.py
wardroom/: __init__.py  aws.py  cli.py  shell.py  util.py
(+116 files in other folders)
