[metadata]
name = wardroom
description-file = README.md
author = Craig Tracey
author-email = craigtracey@gmail.com
include_package_data = True
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[entry_points]
console_scripts =
    wardroom = wardroom.shell:main

wardroom.cluster.provisioners =
    vagrant = wardroom.cluster.provisioners.vagrant:VagrantProvisioner
    terraform-ec2 = wardroom.cluster.provisioners.terraform_ec2:TerraformEC2Provisioner

[files]
packages =
    wardroom

data_files =
    ansible = wardroom/data/ansible/*
    packer = wardroom/data/packer/*
    profiles = wardroom/data/profiles/*
    swizzle = wardroom/data/swizzle/*
    terraform = wardroom/data/terraform/*
