[metadata]
name = wardroom-provision
description-file = README.md
author = Craig Tracey
author-email = craigtracey@gmail.com
include_package_data = True
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[entry_points]
console_scripts =
    wardroom = wardroom_provision.shell:main

wardroom_provision.provisioners =
    vagrant = wardroom_provision.provisioners.vagrant:VagrantProvisioner
    terraform-ec2 = wardroom_provision.provisioners.terraform_ec2:TerraformEC2Provisioner

[files]
packages =
    wardroom_provision
